feat: create review product for client api

--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -17,6 +17,7 @@
     "@avada/utils": "^2.0.3",
     "@google-cloud/firestore": "^8.0.0",
     "@google-cloud/pubsub": "^5.2.0",
+    "@koa/cors": "^5.0.0",
     "axios": "^1.12.2",
     "dotenv": "^16.4.5",
     "firebase-admin": "^13.6.0",
