--- a/firebase.json
+++ b/firebase.json
@@ -70,6 +70,10 @@
         "function": "embedApp"
       },
       {
+        "source": "/clientApi/**",
+        "function": "clientApi"
+      },
+      {
         "source": "**",
         "destination": "/standalone.html"
       }
